--- a/css/screen.css
+++ b/css/screen.css
@@ -238,3 +238,36 @@ form {
   resize: vertical
   background-color: #1d155c;
 }
+
+label {
+  display: block;
+  margin-bottom: 20px; 
+  font-weight: bold;
+}
+
+input[type="email"] {
+  width: 100%;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+input[type="checkbox"] {
+  margin-right: 10px; 
+}
+
+input[type="submit"] {
+  background-color: #a82828; 
+  color: #fff; 
+  padding: 45px 50px; 
+  border: none; 
+  border-radius: 5px;
+  font-size: 16px; 
+  cursor: pointer;
+  transition: background-color 0.2s ease; 
+  margin-top: 20px; 
+}
+
+input[type="submit"]:hover {
+  background-color: #555; 
+}
