--- a/css/screen.css
+++ b/css/screen.css
@@ -228,6 +228,7 @@ main {
 }
 
 form {
+  background-color: #f5f5f5;
   width: 80%; 
   padding: 12px; 
   border: 1px solid #ccc; 
@@ -236,7 +237,6 @@ form {
   margin-top: 6px; 
   margin-bottom: 16px; 
   resize: vertical
-  background-color: #1d155c;
 }
 
 label {
